공포탐욕지수 UI 한글화 및 데이터 표시 로직 개선

--- a/index.html
+++ b/index.html
@@ -593,11 +593,11 @@
         }
 
         // 7. 미국 주식 - Finnhub (SPY, QQQ)
-        // SPY (S&P 500 ETF)
+        // SPY
         const sp500Url = `https://finnhub.io/api/v1/quote?symbol=SPY&token=${FINNHUB_KEY}`;
         try {
           const spRes = await fetch(proxy + encodeURIComponent(sp500Url));
-          if (!spRes.ok) throw new Error(`SPY HTTP error! status: ${spRes.status}`);
+          if (!spRes.ok) throw new Error(`SPY HTTP ${spRes.status}`);
           const spData = await spRes.json();
 
           if (spData.c && spData.c > 0) {
@@ -621,11 +621,11 @@
           document.getElementById('sp500-change').textContent = '오류';
         }
 
-        // QQQ (NASDAQ 100 ETF)
+        // QQQ
         const ndxUrl = `https://finnhub.io/api/v1/quote?symbol=QQQ&token=${FINNHUB_KEY}`;
         try {
           const ndxRes = await fetch(proxy + encodeURIComponent(ndxUrl));
-          if (!ndxRes.ok) throw new Error(`QQQ HTTP error! status: ${ndxRes.status}`);
+          if (!ndxRes.ok) throw new Error(`QQQ HTTP ${ndxRes.status}`);
           const ndxData = await ndxRes.json();
 
           if (ndxData.c && ndxData.c > 0) {
@@ -649,49 +649,47 @@
           document.getElementById('ndx-change').textContent = '오류';
         }
 
-        // 8. 미국 주식 공포탐욕 지수 (CNN) - proxy 없이 직접 호출 테스트
-const cnnFngUrl = 'https://production.dataviz.cnn.io/index/fearandgreed/graphdata';
-try {
-  const cnnRes = await fetch(cnnFngUrl);
-  if (!cnnRes.ok) throw new Error(`CNN HTTP ${cnnRes.status}`);
-  const cnnData = await cnnRes.json();
+        // 8. 미국 주식 공포탐욕 지수 (CNN) - proxy 없이 직접 호출
+        const cnnFngUrl = 'https://production.dataviz.cnn.io/index/fearandgreed/graphdata';
+        try {
+          const cnnRes = await fetch(cnnFngUrl);
+          if (!cnnRes.ok) throw new Error(`CNN HTTP ${cnnRes.status}`);
+          const cnnData = await cnnRes.json();
 
-  // CNN 응답 구조: fear_and_greed.score 또는 fear_and_greed.historical.data 배열의 최신 값
-  let value;
-  if (cnnData?.fear_and_greed?.score) {
-    value = Math.round(cnnData.fear_and_greed.score);
-  } else if (cnnData?.fear_and_greed?.historical?.data?.length > 0) {
-    // 배열 형태일 경우 최신 값 (가장 최근 timestamp)
-    const latest = cnnData.fear_and_greed.historical.data[0]; // 배열이 최신순인지 확인 필요
-    value = Math.round(latest.y || latest.score);
-  }
+          let value;
+          if (cnnData?.fear_and_greed?.score) {
+            value = Math.round(cnnData.fear_and_greed.score);
+          } else if (cnnData?.fear_and_greed?.historical?.data?.length > 0) {
+            const latest = cnnData.fear_and_greed.historical.data[0];
+            value = Math.round(latest.y || latest.score);
+          }
 
-  if (value !== undefined && !isNaN(value)) {
-    const cls = getKoreanClassification(value);
-    const rotation = value * 1.8 - 90;
+          if (value !== undefined && !isNaN(value)) {
+            const cls = getKoreanClassification(value);
+            const rotation = value * 1.8 - 90;
 
-    document.getElementById('fng-value-us').textContent = value;
-    document.getElementById('fng-class-us').textContent = cls.text;
-    document.getElementById('fng-class-us').className = `text-xs text-center ${cls.color}`;
-    document.getElementById('fng-needle-us').style.transform = `translateX(-50%) rotate(${rotation}deg)`;
-  } else {
-    document.getElementById('fng-value-us').textContent = '—';
-    document.getElementById('fng-class-us').textContent = '데이터 없음';
-  }
-} catch (err) {
-  console.error('CNN Fear & Greed 직접 fetch 오류:', err);
-  document.getElementById('fng-value-us').textContent = '—';
-  document.getElementById('fng-class-us').textContent = '오류';
-}
+            document.getElementById('fng-value-us').textContent = value;
+            document.getElementById('fng-class-us').textContent = cls.text;
+            document.getElementById('fng-class-us').className = `text-xs text-center ${cls.color}`;
+            document.getElementById('fng-needle-us').style.transform = `translateX(-50%) rotate(${rotation}deg)`;
+          } else {
+            document.getElementById('fng-value-us').textContent = '—';
+            document.getElementById('fng-class-us').textContent = '데이터 없음';
+          }
+        } catch (err) {
+          console.error('CNN Fear & Greed 직접 fetch 오류:', err);
+          document.getElementById('fng-value-us').textContent = '—';
+          document.getElementById('fng-class-us').textContent = '오류';
+        }
 
       } catch (err) {
-        console.error('전체 데이터 업데이트 오류:', err);
+        console.error('데이터 업데이트 오류:', err);
       }
     }
 
     updateAllData();
-    setInterval(updateAllData, 60000);  // 1분마다
-    // setInterval(updateAllData, 300000);  // 필요시 5분으로 변경 추천
+    setInterval(updateAllData, 60000); // 1분마다 업데이트
+    // setInterval(updateAllData, 300000); // 5분마다로 변경하고 싶을 때 사용
   </script>
 
 </body>
