--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
       return { text: '극단적 탐욕', color: 'text-emerald-500' };
     }
 
-    // Finnhub API 키
+    // Finnhub API 키 (다른 부분에서만 사용)
     const FINNHUB_KEY = 'd61e1n9r01quq5pfv0qgd61e1n9r01quq5pfv0r0';
 
     // 모든 데이터 업데이트 함수
@@ -486,10 +486,168 @@
       try {
         const proxy = '/api/proxy?url=';
 
-        // 1~8번 (환율, 크립토, 원자재, 미국 주식, CNN F&G) 부분은 이전과 동일하게 유지
-        // 여기서는 생략하고 한국 주식 부분만 집중적으로 수정
+        // 1. 환율
+        const fxTarget = 'https://cdn.jsdelivr.net/npm/@fawazahmed0/currency-api@latest/v1/currencies/usd.min.json';
+        const fxRes = await fetch(proxy + encodeURIComponent(fxTarget));
+        const fxData = await fxRes.json();
+        if (fxData?.usd?.krw) {
+          document.getElementById('usdkrw-value').textContent = `${fxData.usd.krw.toFixed(1)}원`;
+          document.getElementById('usdkrw-change').textContent = '실시간';
+        }
 
-        // 미국 주식 CNN Fear & Greed (한국 주식에서도 재사용하기 위해 값 저장)
+        // 2. CoinGecko BTC + ETH
+        const cgTarget = 'https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum&vs_currencies=usd,krw&include_24hr_change=true';
+        const cgRes = await fetch(proxy + encodeURIComponent(cgTarget));
+        const cgData = await cgRes.json();
+
+        if (cgData.bitcoin) {
+          const btc = cgData.bitcoin;
+          const usd = btc.usd.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 });
+          const krw = Math.floor(btc.krw).toLocaleString('ko-KR');
+          const chg = btc.usd_24h_change.toFixed(2);
+          const pos = chg >= 0;
+
+          document.getElementById('btc-price').innerHTML = `
+            <div class="text-lg font-bold">$${usd}</div>
+            <div class="text-base font-bold ml-2">₩${krw}</div>
+          `;
+          const btcChgEl = document.getElementById('btc-change');
+          btcChgEl.className = `text-xs flex justify-center items-center space-x-1 mt-1 ${pos ? 'positive' : 'negative'}`;
+          btcChgEl.innerHTML = `<i class="fas fa-arrow-trend-${pos ? 'up' : 'down'}"></i><span>${pos ? '+' : ''}${chg}%</span>`;
+        }
+
+        if (cgData.ethereum) {
+          const eth = cgData.ethereum;
+          const usd = eth.usd.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 2 });
+          const krw = Math.floor(eth.krw).toLocaleString('ko-KR');
+          const chg = eth.usd_24h_change.toFixed(2);
+          const pos = chg >= 0;
+
+          document.getElementById('eth-price').innerHTML = `
+            <div class="text-lg font-bold">$${usd}</div>
+            <div class="text-base font-bold ml-2">₩${krw}</div>
+          `;
+          const ethChgEl = document.getElementById('eth-change');
+          ethChgEl.className = `text-xs flex justify-center items-center space-x-1 mt-1 ${pos ? 'positive' : 'negative'}`;
+          ethChgEl.innerHTML = `<i class="fas fa-arrow-trend-${pos ? 'up' : 'down'}"></i><span>${pos ? '+' : ''}${chg}%</span>`;
+        }
+
+        // 3. 업비트
+        const upRes = await fetch('https://api.upbit.com/v1/ticker?markets=KRW-BTC,KRW-USDT');
+        const upData = await upRes.json();
+
+        let upBtcKrw = 0;
+        let upUsdt = 0;
+        let upUsdtChgRate = 0;
+        let upUsdtChgWon = 0;
+
+        upData.forEach(item => {
+          if (item.market === 'KRW-BTC') upBtcKrw = item.trade_price;
+          if (item.market === 'KRW-USDT') {
+            upUsdt = item.trade_price;
+            upUsdtChgRate = (item.signed_change_rate * 100).toFixed(2);
+            upUsdtChgWon = Math.round(item.signed_change_price);
+          }
+        });
+
+        if (upUsdt) {
+          const price = Math.round(upUsdt).toLocaleString('ko-KR');
+          const pos = upUsdtChgRate >= 0;
+          document.getElementById('upbit-usdt-value').textContent = `₩${price}`;
+          const upChgEl = document.getElementById('upbit-usdt-change');
+          upChgEl.textContent = `${pos ? '+' : ''}${upUsdtChgRate}% (${pos ? '+' : ''}${upUsdtChgWon.toLocaleString('ko-KR')}원)`;
+          upChgEl.className = `change ${pos ? 'positive' : 'negative'}`;
+        }
+
+        // 4. 빗썸 USDT
+        const bhRes = await fetch('https://api.bithumb.com/public/ticker/USDT_KRW');
+        const bhData = await bhRes.json();
+        if (bhData.status === '0000') {
+          const price = Math.round(bhData.data.closing_price).toLocaleString('ko-KR');
+          const chgRate = ((bhData.data.closing_price - bhData.data.opening_price) / bhData.data.opening_price * 100).toFixed(2);
+          const chgWon = Math.round(bhData.data.closing_price - bhData.data.opening_price).toLocaleString('ko-KR');
+          const pos = chgRate >= 0;
+
+          document.getElementById('bithumb-usdt-value').textContent = `₩${price}`;
+          const bhChgEl = document.getElementById('bithumb-usdt-change');
+          bhChgEl.textContent = `${pos ? '+' : ''}${chgRate}% (${pos ? '+' : ''}${chgWon}원)`;
+          bhChgEl.className = `change ${pos ? 'positive' : 'negative'}`;
+        }
+
+        // 5. 김치프리미엄
+        if (upBtcKrw && cgData.bitcoin && fxData?.usd?.krw) {
+          const globalBtcKrw = cgData.bitcoin.usd * fxData.usd.krw;
+          const premium = ((upBtcKrw / globalBtcKrw) - 1) * 100;
+          const premiumStr = premium.toFixed(2);
+          const pos = premium >= 0;
+
+          const kimchiEl = document.getElementById('kimchi-premium');
+          kimchiEl.textContent = `${pos ? '+' : ''}${premiumStr}%`;
+          kimchiEl.className = `value ${pos ? 'positive' : 'negative'}`;
+        }
+
+        // 6. 크립토 공포탐욕 지수
+        const fngTarget = 'https://api.alternative.me/fng/?limit=1';
+        const fngRes = await fetch(proxy + encodeURIComponent(fngTarget));
+        const fngData = await fngRes.json();
+
+        if (fngData?.data?.length > 0) {
+          const value = parseInt(fngData.data[0].value, 10);
+          const cls = getKoreanClassification(value);
+          const rotation = value * 1.8 - 90;
+
+          document.getElementById('fng-value-crypto').textContent = value;
+          document.getElementById('fng-class-crypto').textContent = cls.text;
+          document.getElementById('fng-class-crypto').className = `text-xs text-center ${cls.color}`;
+          document.getElementById('fng-needle-crypto').style.transform = `translateX(-50%) rotate(${rotation}deg)`;
+        }
+
+        // 7. 미국 주식 - Finnhub
+        const sp500Url = `https://finnhub.io/api/v1/quote?symbol=SPY&token=${FINNHUB_KEY}`;
+        try {
+          const spRes = await fetch(proxy + encodeURIComponent(sp500Url));
+          if (!spRes.ok) throw new Error(`SPY HTTP ${spRes.status}`);
+          const spData = await spRes.json();
+
+          if (spData.c && spData.c > 0) {
+            const price = spData.c.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+            const prevClose = spData.pc;
+            const change = (spData.c - prevClose).toFixed(2);
+            const changePct = ((spData.c - prevClose) / prevClose * 100).toFixed(2);
+            const pos = (spData.c - prevClose) >= 0;
+
+            document.getElementById('sp500-price').textContent = price;
+            const spEl = document.getElementById('sp500-change');
+            spEl.innerHTML = `${pos ? '+' : ''}${changePct}% (${pos ? '+' : ''}${change})`;
+            spEl.className = `text-xs flex justify-center items-center ${pos ? 'positive' : 'negative'}`;
+          }
+        } catch (err) {
+          console.error('Finnhub SPY 오류:', err);
+        }
+
+        const ndxUrl = `https://finnhub.io/api/v1/quote?symbol=QQQ&token=${FINNHUB_KEY}`;
+        try {
+          const ndxRes = await fetch(proxy + encodeURIComponent(ndxUrl));
+          if (!ndxRes.ok) throw new Error(`QQQ HTTP ${ndxRes.status}`);
+          const ndxData = await ndxRes.json();
+
+          if (ndxData.c && ndxData.c > 0) {
+            const price = ndxData.c.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
+            const prevClose = ndxData.pc;
+            const change = (ndxData.c - prevClose).toFixed(2);
+            const changePct = ((ndxData.c - prevClose) / prevClose * 100).toFixed(2);
+            const pos = (ndxData.c - prevClose) >= 0;
+
+            document.getElementById('ndx-price').textContent = price;
+            const ndxEl = document.getElementById('ndx-change');
+            ndxEl.innerHTML = `${pos ? '+' : ''}${changePct}% (${pos ? '+' : ''}${change})`;
+            ndxEl.className = `text-xs flex justify-center items-center ${pos ? 'positive' : 'negative'}`;
+          }
+        } catch (err) {
+          console.error('Finnhub QQQ 오류:', err);
+        }
+
+        // 8. 미국 주식 공포탐욕 지수 (CNN)
         let cnnValue = null;
         const cnnFngUrl = 'https://production.dataviz.cnn.io/index/fearandgreed/graphdata';
         try {
@@ -517,58 +675,64 @@
           console.error('CNN Fear & Greed 오류:', err);
         }
 
-        // 9. 한국 주식 - KODEX 200 (122630) 고정
-        const kodex200Url = `https://finnhub.io/api/v1/quote?symbol=122630&token=${FINNHUB_KEY}`;
+        // 9. 한국 주식 - 네이버 금융 KODEX 200 (122630)
         try {
-          const res = await fetch(proxy + encodeURIComponent(kodex200Url));
-          if (!res.ok) throw new Error(`KODEX200 HTTP ${res.status}`);
-          const data = await res.json();
+          const kodex200Url = 'https://finance.naver.com/item/main.naver?code=122630';
+          const res200 = await fetch(proxy + encodeURIComponent(kodex200Url));
+          const text200 = await res200.text();
+          const parser = new DOMParser();
+          const doc = parser.parseFromString(text200, 'text/html');
 
-          if (data.c && data.c > 0) {
-            const price = data.c.toLocaleString('ko-KR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
-            const prevClose = data.pc;
-            const change = (data.c - prevClose).toFixed(2);
-            const changePct = ((data.c - prevClose) / prevClose * 100).toFixed(2);
-            const pos = (data.c - prevClose) >= 0;
+          // 현재가
+          const priceEl = doc.querySelector('.price .blind') || doc.querySelector('em.no_up, em.no_down');
+          const currentPrice = priceEl ? priceEl.textContent.trim().replace(/,/g, '') : null;
 
-            document.getElementById('kospi-price').textContent = price;
+          // 변화율
+          const changeRateEl = doc.querySelector('.ratio .blind');
+          const changeRate = changeRateEl ? changeRateEl.textContent.trim() : null;
+
+          if (currentPrice) {
+            document.getElementById('kospi-price').textContent = Number(currentPrice).toLocaleString('ko-KR');
+          }
+
+          if (changeRate) {
+            const isPositive = !changeRate.includes('-');
             const el = document.getElementById('kospi-change');
-            el.innerHTML = `${pos ? '+' : ''}${changePct}% (${pos ? '+' : ''}${change})`;
-            el.className = `text-xs flex justify-center items-center ${pos ? 'positive' : 'negative'}`;
-          } else {
-            document.getElementById('kospi-price').textContent = '—';
-            document.getElementById('kospi-change').textContent = '장마감/데이터 없음';
+            el.innerHTML = `<i class="fas fa-arrow-trend-${isPositive ? 'up' : 'down'}"></i> ${changeRate}`;
+            el.className = `text-xs flex justify-center items-center ${isPositive ? 'positive' : 'negative'}`;
           }
         } catch (err) {
-          console.error('KODEX 200 오류:', err);
+          console.error('네이버 KODEX200 오류:', err);
           document.getElementById('kospi-price').textContent = '—';
           document.getElementById('kospi-change').textContent = '오류';
         }
 
-        // 10. 한국 주식 - KODEX 코스닥150 (229200) 고정
-        const kodex150Url = `https://finnhub.io/api/v1/quote?symbol=229200&token=${FINNHUB_KEY}`;
+        // 10. 한국 주식 - 네이버 금융 KODEX 코스닥150 (229200)
         try {
-          const res = await fetch(proxy + encodeURIComponent(kodex150Url));
-          if (!res.ok) throw new Error(`KODEX150 HTTP ${res.status}`);
-          const data = await res.json();
+          const kodex150Url = 'https://finance.naver.com/item/main.naver?code=229200';
+          const res150 = await fetch(proxy + encodeURIComponent(kodex150Url));
+          const text150 = await res150.text();
+          const parser = new DOMParser();
+          const doc = parser.parseFromString(text150, 'text/html');
 
-          if (data.c && data.c > 0) {
-            const price = data.c.toLocaleString('ko-KR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
-            const prevClose = data.pc;
-            const change = (data.c - prevClose).toFixed(2);
-            const changePct = ((data.c - prevClose) / prevClose * 100).toFixed(2);
-            const pos = (data.c - prevClose) >= 0;
+          const priceEl = doc.querySelector('.price .blind') || doc.querySelector('em.no_up, em.no_down');
+          const currentPrice = priceEl ? priceEl.textContent.trim().replace(/,/g, '') : null;
 
-            document.getElementById('kosdaq-price').textContent = price;
+          const changeRateEl = doc.querySelector('.ratio .blind');
+          const changeRate = changeRateEl ? changeRateEl.textContent.trim() : null;
+
+          if (currentPrice) {
+            document.getElementById('kosdaq-price').textContent = Number(currentPrice).toLocaleString('ko-KR');
+          }
+
+          if (changeRate) {
+            const isPositive = !changeRate.includes('-');
             const el = document.getElementById('kosdaq-change');
-            el.innerHTML = `${pos ? '+' : ''}${changePct}% (${pos ? '+' : ''}${change})`;
-            el.className = `text-xs flex justify-center items-center ${pos ? 'positive' : 'negative'}`;
-          } else {
-            document.getElementById('kosdaq-price').textContent = '—';
-            document.getElementById('kosdaq-change').textContent = '장마감/데이터 없음';
+            el.innerHTML = `<i class="fas fa-arrow-trend-${isPositive ? 'up' : 'down'}"></i> ${changeRate}`;
+            el.className = `text-xs flex justify-center items-center ${isPositive ? 'positive' : 'negative'}`;
           }
         } catch (err) {
-          console.error('KODEX 150 오류:', err);
+          console.error('네이버 KODEX150 오류:', err);
           document.getElementById('kosdaq-price').textContent = '—';
           document.getElementById('kosdaq-change').textContent = '오류';
         }
@@ -582,12 +746,7 @@
           document.getElementById('fng-class-korea').textContent = cls.text;
           document.getElementById('fng-class-korea').className = `text-xs text-center ${cls.color}`;
           document.getElementById('fng-needle-korea').style.transform = `translateX(-50%) rotate(${rotation}deg)`;
-        } else {
-          document.getElementById('fng-value-korea').textContent = '—';
-          document.getElementById('fng-class-korea').textContent = '데이터 없음';
         }
-
-        // (기존 다른 데이터 업데이트 로직은 그대로 유지)
 
       } catch (err) {
         console.error('데이터 업데이트 오류:', err);
